Make the requestPickup bidWindow buttons submit correct minute values

--- a/www/kerbit/imports/ui/pages/requestPickup.html
+++ b/www/kerbit/imports/ui/pages/requestPickup.html
@@ -112,19 +112,22 @@
               potential drivers will be able to see your request on the map view, and place offers.</p>
             <p class="range-field">
 
-              <input name="bidWindow" type="radio" id="oneHour" value="1"/>
+              <input name="bidWindow" type="radio" id="tenMinutes" value="10"/>
+              <label for="tenMinutes">10 Minutes</label>
+
+              <input name="bidWindow" type="radio" id="oneHour" value="60"/>
               <label for="oneHour">1 Hour</label>
 
-              <input name="bidWindow" type="radio" id="threeHour" value="3"/>
+              <input name="bidWindow" type="radio" id="threeHour" value="180"/>
               <label for="threeHour">3 Hours</label>
 
-              <input name="bidWindow" type="radio" id="fiveHour" value="6"/>
+              <input name="bidWindow" type="radio" id="fiveHour" value="360"/>
               <label for="fiveHour">6 Hours</label>
 
-              <input name="bidWindow" type="radio" id="twelveHour" value="12"/>
+              <input name="bidWindow" type="radio" id="twelveHour" value="720"/>
               <label for="twelveHour">12 Hours</label>
 
-              <input name="bidWindow" type="radio" id="day" value="24"/>
+              <input name="bidWindow" type="radio" id="day" value="1440"/>
               <label for="day">24 Hours</label>
 
             </p>
