--- a/www/kerbit/imports/ui/pages/myOffers.html
+++ b/www/kerbit/imports/ui/pages/myOffers.html
@@ -8,16 +8,16 @@
   <div class="row">
     <div class="col s12">
       <ul class="tabs">
-        <li class="tab col s6"><a href="#pending">Pending Offers</a></li>
-        <li class="tab col s6"><a class="active" href="#accepted">Accepted Offers</a></li>
+        <li class="tab col s6"><a id="tab1" href="#pending">Pending Offers</a></li>
+        <li class="tab col s6"><a id="tab2" class="active" href="#accepted">Accepted Offers</a></li>
       </ul>
     </div>
     <div id="pending" class="col s12">
       <br>
       {{#each pendingOffers}}
-        {{#each requests requestId}}
-          <div class="container">
-            <div class="row">
+        <div class="container">
+          <div class="row">
+            {{#each requests requestId}}
               <div class="col s6">
                 <div class="card">
                   {{#each ItemWithId itemId}}
@@ -58,9 +58,10 @@
                   </div>
                 </div>
               </div>
-            </div>
+            {{/each}}
           </div>
-        {{/each}}
+        </div>
+
       {{/each}}
     </div>
     <div id="accepted" class="col s12">
@@ -68,9 +69,9 @@
         {{> map}}
       </div>
       <br>
-      {{#each transactions}}
-        <div class="container">
-          <div class="row">
+      <div class="container">
+        <div class="row">
+          {{#each transactions}}
             <div class="col s6">
               <div class="card">
                 {{#each ItemWithId itemId}}
@@ -98,9 +99,9 @@
                 </div>
               </div>
             </div>
-          </div>
+          {{/each}}
         </div>
-      {{/each}}
+      </div>
     </div>
   </div>
 </template>
